--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.328.0",
+    "@aws-sdk/s3-presigned-post": "^3.328.0",
     "@clerk/nextjs": "^4.16.4",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.28.0",
